--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,10 @@ flake8==3.8.4
 mccabe==0.6.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
+
+# Dependências do PyTest
+pluggy==0.12
+py==1.8.2
+attrs==19.2.0
+pyparsing==2.0.2
 -r requirements.txt
