--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - 3.9.1
 install:
-  - pip install -q -r requirements-dev.txt
+  - pip install -q -r requirements-dev.txt codecov
 script:
   - flake8
-  - pytest libpythonpro-fgomes
+  - pytest libpythonpro-fgomes/tests --cov=libpythonpro-fgomes
+after_success:
+  - codecov
